--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "micept"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "micept"
+authors = ["mirakyux"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
